--- a/index.css
+++ b/index.css
@@ -103,10 +103,12 @@ header{
  .image-wrap {
   height: 100px;
   width:100px;
-  border-radius: 50px;
+  border-radius: 25px;
+  overflow: hidden;
  }
  .image-wrap img {
   height: 100%;
+  border-radius: 25px;
   }
 
   h1  {
@@ -194,14 +196,14 @@ header{
 hr {
   height: 2px;
   width: 80%;
-  margin-top: 40px;
+  margin-top: 100px;
   background-color: violet;
   border-color: violet;
 }
 footer {
-  font-size: 20px;
+  font-size: 1.2em;
+  font-variant: small-caps;
   color: violet;
-  font-family: Verdana, Tahoma, sans-serif;
   margin: 20px;
   margin-bottom: 8px;
 }
